--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="about" class="p-10 text-center bg-gray-900 fade-in">
         <h2 class="text-4xl font-bold mb-6">About Me</h2>
         <p class="text-lg max-w-3xl mx-auto">
-            I am a detail-oriented engineering student with a strong passion for <b>software development</b> and <b>problem-solving</b>.
+            I have a strong interest in full-stack Java development. I enjoy building <b>web applications</b> using Java, JSP, Servlets, MySQL, and modern web technologies. I'm a quick learner, passionate about problem-solving, and always ready to take on new challenges in tech.
         </p>
     </section>
 
