--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Banner Section -->
     <section class="h-screen flex flex-col md:flex-row items-center justify-center px-10 pt-20">
         <div class="md:w-1/2 flex justify-center">
-            <img src="profile.jpeg" alt="Rixiya Cathrine" class="rounded-full w-72 border-4 border-white shadow-lg">
+            <img src="assets/profile.jpeg" alt="Rixiya Cathrine" class="rounded-full w-72 border-4 border-white shadow-lg">
         </div>
         <div class="md:w-1/2 md:pl-10 text-center md:text-left">
             <h1 class="text-5xl font-bold animate-fade-in">Hi, I'm <span class="text-yellow-300">Rixiya Cathrine</span></h1>
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-   <!-- REMOVE THIS DUPLICATE SECTION -->
+  
     <section id="about" class="p-10 text-center bg-gray-900 fade-in">
         <h2 class="text-4xl font-bold mb-6">About Me</h2>
         <p class="text-lg max-w-3xl mx-auto">
