--- a/index.html
+++ b/index.html
@@ -99,17 +99,6 @@
                target="_blank">View Code</a>
         </div>
 
-        <!-- Online Quiz Project -->
-        <div class="bg-white text-black rounded-xl shadow-lg p-6 hover:scale-105 transition duration-300">
-            <h3 class="text-2xl font-semibold mb-2">Online Quiz System</h3>
-            <p class="text-base mb-4">
-                Java-based console application that allows users to take timed quizzes, view scores, and navigate through multiple-choice questions with ease.
-            </p>
-            <a href="https://github.com/RIXIYACATHRINE/Online-quiz"
-                class="inline-block mt-2 text-white bg-blue-600 px-4 py-2 rounded hover:bg-blue-700 transition"
-                target="_blank">View Code</a>
-        </div>
-
 
         <!-- Movie Show Management System -->
         <div class="bg-white text-black rounded-xl shadow-lg p-6 hover:scale-105 transition duration-300">
@@ -141,6 +130,13 @@
                class="inline-block mt-2 text-white bg-blue-600 px-4 py-2 rounded hover:bg-blue-700 transition" 
                target="_blank">View Demo</a>
         </div>
+
+        <!-- Color Detector - Embedded C Project -->
+        <div class="bg-white text-black rounded-xl shadow-lg p-6 hover:scale-105 transition duration-300">
+            <h3 class="text-2xl font-semibold mb-2">Color Detector – Embedded C</h3>
+            <p class="text-base mb-4">Real-time embedded system using sensor interfacing to detect and classify colors based on thresholds. Built with optimized data processing and automated output display.</p>
+        </div>
+
 
     </div>
 </section>
